--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
 *{
-    margin:0;
-    padding:0;
-    box-sizing:border-box;
-    font-family:  'Times New Roman', Times, serif ;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Times New Roman', Times, serif;
 }
 
 body{
-    background-color: rgb(89,90,106);
-    color: white;
+    background-color: rgb(89, 90, 106);
+    color:white;
     height: 100vh;
     display: flex;
     justify-content: center;
@@ -17,8 +17,8 @@ body{
 .container{
     display: flex;
     flex-direction: column;
-    gap: 2rem;
-    background-color: grey;
+    gap: 1rem;
+    background-color: rgb(69, 64, 64);
     padding: 20px;
     border-radius: 5px;
     width: 50%;
@@ -51,6 +51,7 @@ h1{
     padding: 0.4rem;
     border-radius: 5px;
 }
+
 .circle{
     width: 120px;
     height: 120px;
@@ -78,4 +79,96 @@ h1{
     flex-wrap: wrap;
     gap: 10px;
 }
+
+.stats-cards{
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    justify-content: space-evenly;
+}
+
+h4{
+    font-size: 1rem;
+}
+
+.card{
+    background-color: rgb(230, 146, 44);
+    width: 40%;
+    max-width: 290px;
+    padding: 10px;
+    border-radius: 10px;
+    font-size: 1rem;
+    min-height: 4rem;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
